<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/viewBg"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_add_availability_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:layout_weight="0"
        android:text="@string/add_item_availability"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/sp_items"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:paddingTop="@dimen/spinner_top_bottom_padding"
                android:paddingBottom="@dimen/spinner_top_bottom_padding"
                android:spinnerMode="dialog" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_hint"
                    android:inputType="date"
                    android:textSize="@dimen/add_item_details_field" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date_hint"
                    android:inputType="time"
                    android:textSize="@dimen/add_item_details_field" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_add_availability"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/add_availability_btn"
        android:layout_weight="0"/>

</LinearLayout>
